--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -5,10 +5,16 @@ body, html, #app{
     margin: 0;
 }
 
-#app{
+#app, .with-canvas{
     position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
+}
+
+.Control__ui {
+    position: fixed;
+    top: 0;
+    right:0;
 }
